@@ -54,6 +54,8 @@ export(atomic_percent)
 export(calc_element)
 export(coord_tern)
 export(custom_percent)
+export(draw_key_Xline)
+export(draw_key_crosshair_tern)
 export(element_ternary)
 export(geom_Lisoprop)
 export(geom_Lline)
