@@ -7,6 +7,7 @@ ggtern 2.0.2
 * Fixed bug in theme_custom(...)
 * Fixed bug in how the order of axis label preferences ie, Tarrow << yarrow << T << y << default etc...
 * Created geom_ternary_crosshar new geometry
+* Added some custom legend keys for new geometries
 
 ggtern 2.0.1
 ----------------------------------------------------------------
